[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actor/Enemy/Climber.gd" type="Script" id=1]
[ext_resource path="res://assets/Actor/Enemy/Climber.png" type="Texture" id=2]
[ext_resource path="res://assets/SFX/Placeholder/snd_enemy_hurt.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[node name="Climber" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="Body" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 2 )
hframes = 8
vframes = 2

[node name="Arm" type="Area2D" parent="."]
position = Vector2( 16, 0 )
collision_layer = 0
collision_mask = 8

[node name="Sprite" type="Sprite" parent="Arm"]
texture = ExtResource( 2 )
hframes = 8
vframes = 2
frame = 8

[node name="CollisionShape" type="CollisionShape2D" parent="Arm"]
shape = SubResource( 4 )

[node name="Arm2" type="Area2D" parent="."]
position = Vector2( -16, 0 )
collision_layer = 0
collision_mask = 8

[node name="Sprite" type="Sprite" parent="Arm2"]
texture = ExtResource( 2 )
hframes = 8
vframes = 2
frame = 8

[node name="CollisionShape" type="CollisionShape2D" parent="Arm2"]
shape = SubResource( 5 )

[node name="PosHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 0.058315
bus = "SFX"

[connection signal="body_entered" from="Arm" to="." method="_on_Arm_body_entered"]
[connection signal="body_entered" from="Arm2" to="." method="_on_Arm2_body_entered"]
